@@ -2,6 +2,7 @@ Changelog next version
 ----------------------
 * Upgrading kotlin to 1.6.21
 * Moved package io.restassured.assertion to io.restassured.internal.assertion since the classes in this package should be internal.
+* Added support for Spring Framework 6.0 and Jakarta API's in Spring MockMvc module.
 
 Changelog 5.0.1 (2022-04-06)
 ----------------------------
